--- a/css/sites/home.css
+++ b/css/sites/home.css
@@ -5,51 +5,6 @@
     --article-text-size: 1rem
 }
 
-.title-area span {
-    background: rgb(0,255,248);
-    background: linear-gradient(
-            152deg,
-            rgba(0,255,248,1) 0%,
-            rgba(162,0,255,1) 100%
-    );
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.title-area p {
-    font-size: 1.75rem;
-}
-
-.title-area h1 {
-    font-size: 4rem;
-}
-
-.article-area h1 {
-    font-size: 3rem;
-}
-
-.article-area p {
-    font-size: 1.5rem;
-}
-
-.article-area h1 span {
-    color: rgb(35, 198, 198);
-}
-
-.article-area img {
-    transition: 1.5s;
-}
-
-.article-mc-start {
-    height: 8rem;
-    background: linear-gradient(358deg, #212529 45%, #fff 49%);
-}
-
-.article-mc-end {
-    height: 8rem;
-    background: linear-gradient(358deg, #fff 45%, #212529 49%);
-}
-
 @media only screen and (max-width: 600px) {
     .title-area h1 {
         font-size: var(--title-size-small);
@@ -66,4 +21,48 @@
     .article-area p {
         font-size: var(--article-text-size);
     }
+}
+
+.title-area h1 {
+    font-size: 4rem;
+}
+.title-area p {
+    font-size: 1.75rem;
+}
+.title-area span {
+    background: rgb(0,255,248);
+    background: linear-gradient(
+            152deg,
+            rgba(0,255,248,1) 0%,
+            rgba(162,0,255,1) 100%
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.article-area h1 {
+    font-size: 3rem;
+}
+.article-area h1 span {
+    color: rgb(35, 198, 198);
+}
+.article-area p {
+    font-size: 1.5rem;
+}
+.article-area img {
+    transition: 1.5s;
+}
+.article-mc-start {
+    height: 8rem;
+    background: linear-gradient(358deg, #212529 45%, #fff 49%);
+}
+.article-mc-end {
+    height: 8rem;
+    background: linear-gradient(358deg, #fff 45%, #212529 49%);
+}
+
+.custom-link {
+    cursor: cell;
+    outline: none;
+    color: var(--bs-dark);
 }
