--- a/css/sites/home.css
+++ b/css/sites/home.css
@@ -43,9 +43,7 @@
 .article-area h1 {
     font-size: 3rem;
 }
-.article-area h1 span {
-    color: rgb(35, 198, 198);
-}
+
 .article-area p {
     font-size: 1.5rem;
 }
@@ -60,9 +58,17 @@
     height: 8rem;
     background: linear-gradient(358deg, #fff 45%, #212529 49%);
 }
+.article-plugins-start {
+    height: 8rem;
+    background: linear-gradient(2deg, #212529 45%, #fff 49%);
+}
+.article-plugins-end {
+    height: 8rem;
+    background: linear-gradient(2deg, #fff 45%, #212529 49%);
+}
 
 .custom-link {
     cursor: cell;
     outline: none;
-    color: var(--bs-dark);
+    color: currentColor;
 }
