--- a/css/sites/products.css
+++ b/css/sites/products.css
@@ -1,34 +1,74 @@
-.title-area p {
-    font-size: 2rem;
+:root {
+    --title-size-small: 2rem;
+    --title-text-size-small: 1.5rem;
+    --article-title-size: 2rem;
+    --article-text-size: 1rem
+}
+
+@media only screen and (max-width: 600px) {
+    .title-area h1 {
+        font-size: var(--title-size-small);
+    }
+
+    .title-area p {
+        font-size: var(--title-text-size-small);
+    }
+
+    .article-area h1 {
+        font-size: var(--article-title-size);
+    }
+
+    .article-area p {
+        font-size: var(--article-text-size);
+    }
 }
 
 .title-area h1 {
-    font-size: 6rem;
+    font-size: 2.25rem;
+}
+.title-area p {
+    font-size: 1.25rem;
+}
+.title-area span {
+    background: rgb(0,255,248);
+    background: linear-gradient(
+            152deg,
+            rgba(0,255,248,1) 0%,
+            rgba(162,0,255,1) 100%
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .article-area h1 {
-    font-size: 4rem;
+    font-size: 3rem;
 }
 
 .article-area p {
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
-
-.article-area p span {
-    font-weight: lighter;
-    color: rgb(255, 119, 0);
-}
-
 .article-area img {
     transition: 1.5s;
 }
-
 .article-mc-start {
     height: 8rem;
-    background: linear-gradient(358deg, #212529 55%, #fff 45%);
+    background: linear-gradient(2deg, #212529 45%, #fff 49%);
 }
-
 .article-mc-end {
     height: 8rem;
-    background: linear-gradient(358deg, #fff 55%, #212529 45%);
+    background: linear-gradient(2deg, #fff 45%, #212529 49%);
+}
+.article-plugins-start {
+    height: 8rem;
+    background: linear-gradient(358deg, #212529 45%, #fff 49%);
+}
+.article-plugins-end {
+    height: 8rem;
+    background: linear-gradient(0deg, #fff 45%, #212529 49%);
+}
+
+.custom-link {
+    cursor: cell;
+    outline: none;
+    color: currentColor;
 }
