--- a/css/sites/sic.css
+++ b/css/sites/sic.css
@@ -1,81 +1,41 @@
-:root {
-    --title-size-small: 3rem;
-    --title-text-size-small: 1.25rem;
-    --article-title-size: 2rem;
-    --article-text-size: 1rem
+::-webkit-scrollbar {
+    display: none;
 }
 
-@media only screen and (max-width: 600px) {
-    .title-area h1 {
-        font-size: var(--title-size-small);
-    }
 
-    .title-area p {
-        font-size: var(--title-text-size-small);
-    }
-
-    .article-area h1 {
-        font-size: var(--article-title-size);
-    }
-
-    .article-area p {
-        font-size: var(--article-text-size);
-    }
+.schoolLogo img {
+    height: 120px;
+    width: 120px;
+    border-radius: 20px;
 }
 
-.title-area h1 {
-    font-size: 4rem;
+.timetable {
+    height: 300px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 10px 10px 0 0;
 }
-.title-area p {
-    font-size: 1.75rem;
-}
-.title-area span {
-    background: rgb(0,255,248);
-    background: linear-gradient(
-            152deg,
-            rgba(0,255,248,1) 0%,
-            rgba(162,0,255,1) 100%
-    );
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+.timetable thead {
+    position: sticky;
+    top: 0;
+    overflow: hidden;
 }
 
-.article-area h1 {
-    font-size: 3rem;
+.news-list {
+    display: flex;
+    overflow-x: auto;
+    overflow-y: hidden;
+    max-height: 300px;
 }
-.article-area h1 span {
-    color: rgb(35, 198, 198);
-}
-.article-area p {
-    font-size: 1.5rem;
-}
-.article-area img {
-    transition: 1.5s;
-}
-.article-mc-start {
-    height: 8rem;
-    background: linear-gradient(358deg, #212529 45%, #fff 49%);
-}
-.article-mc-end {
-    height: 8rem;
-    background: linear-gradient(358deg, #fff 45%, #212529 49%);
+.news-item {
+    min-width: 300px;
+    max-height: 300px;
+    padding-left: 20px;
 }
 
 .custom-link {
     cursor: cell;
     outline: none;
+    text-decoration: none;
+    font-weight: 500;
     color: var(--bs-dark);
-}
-
-.green-check {
-    color: #2dd53c;
-    margin-right: 3px;
-}
-.orange-check {
-    color: #ff7f50;
-    margin-right: 2px;
-}
-.red-check {
-    color: #e02900;
-    margin-right: 2px;
 }
