--- a/css/sites/sic.css
+++ b/css/sites/sic.css
@@ -2,11 +2,25 @@
     display: none;
 }
 
-
 .schoolLogo img {
-    height: 120px;
-    width: 120px;
+    height: 80px;
+    width: 80px;
     border-radius: 20px;
+}
+
+.selectedView {
+    display: flex;
+}
+.selectedView a {
+    font-weight: 600;
+}
+.selectedView span {
+    font-weight: 400;
+}
+.selectedView span:hover {
+    font-weight: 400;
+    color: #0a58ca;
+    cursor: pointer;
 }
 
 .timetable {
@@ -32,10 +46,25 @@
     padding-left: 20px;
 }
 
+.hidden {
+    display: none;
+}
+
 .custom-link {
     cursor: cell;
     outline: none;
     text-decoration: none;
     font-weight: 500;
     color: var(--bs-dark);
+}
+
+.shimmer {
+    color: grey;
+    -webkit-mask: linear-gradient(-60deg, #000 30%, #0005, #000 70%) right/300% 100%;
+    background-repeat: no-repeat;
+    animation: shimmer 2.5s infinite;
+}
+
+@keyframes shimmer {
+    100% {-webkit-mask-position:left}
 }
