rich table and search - better scripts

--- a/css/sites/sic.css
+++ b/css/sites/sic.css
@@ -58,7 +58,10 @@
     color: var(--bs-dark);
 }
 
-.shimmer {
+.loading {
+    /* contrast */
+    background-color: #e1e1e1;
+    /* shimmering */
     color: grey;
     -webkit-mask: linear-gradient(-60deg, #000 30%, #0005, #000 70%) right/300% 100%;
     background-repeat: no-repeat;
