--- a/css/sites/sic.css
+++ b/css/sites/sic.css
@@ -23,6 +23,14 @@
     cursor: pointer;
 }
 
+.splitter {
+    background-color: #2b4b6d;
+    height: 3px;
+    width: 90%;
+    margin: 0 auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
+}
+
 .timetable {
     height: 300px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
