make no data feedback

--- a/css/sites/sic.css
+++ b/css/sites/sic.css
@@ -31,6 +31,16 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
 }
 
+.noEntry {
+    border: none;
+    text-align: center;
+    align-content: center;
+    justify-content: center;
+}
+.noEntry svg {
+    color: #ff6f00;
+}
+
 .timetable {
     height: 300px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
