--- a/css/sites/insektenhotel.css
+++ b/css/sites/insektenhotel.css
@@ -1,11 +1,23 @@
-:root {
-    --title-size-mobil: 1.2rem;
-    --title-text-size-mobil: 0.2rem;
-}
-
 body {
     background-color: #DCDCDC;
     font-family: Roboto,Helvetica Neue,Helvetica,Arial,sans-serif;
+}
+
+.point {
+    display: inline;
+}
+
+.pointLeft {
+    display: none;
+}
+
+@media only screen and (max-width: 700px) {
+    .point {
+        display: none;
+    }
+    .pointLeft {
+        display: inline;
+    }
 }
 
 .introduction {
@@ -59,10 +71,11 @@ body {
     color: #5f5f5f;
 }
 
-
 .forceCarouselImage img {
-    width: 170px;
-    height: 170px;
+    height: 600px;
+    align-content: center;
+    text-align: center;
+    margin: 0 auto;
 }
 
 .roundHover {
