--- a/css/sites/general.css
+++ b/css/sites/general.css
@@ -51,18 +51,24 @@ body {
     font-size: 2.4rem;
 }
 
+.container-text h4 {
+    font-family: 'Arial Black';
+    font-style: normal;
+    font-size: 2rem;
+}
+
 .container-text p {
     font-family: 'Arial';
     font-style: normal;
     font-size: 1.5rem;
 }
 
-.container-module {
+.container-dashboard {
     background-color: #323249;
     border-radius: 10px;
 }
 
-.container-module h5 {
+.container-dashboard h5 {
     font-family: 'Arial';
     font-style: normal;
     font-size: 1.5rem;
@@ -73,4 +79,64 @@ body {
     cursor: cell;
     outline: none;
     color: currentColor;
+}
+
+.button-calendar {
+    background-color: #efefef;
+    border-radius: 0 0 10px 10px;
+    transition: 1s;
+}
+
+.button-calendar-wrong {
+    background-color: #ffa2a2
+}
+
+.button-calendar:hover {
+    background: #e0e0e0;
+    box-shadow:  10px 10px 20px #cecece,
+    -10px -10px 20px #f2f2f2;
+    transition: all 300ms ease-in-out;
+}
+
+.button-calendar button {
+    background-color: transparent;
+    border-radius: 50px;
+    text-align: center;
+    align-self: center;
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    height: 40px;
+    border: 0;
+
+    font-family: "Arial", sans-serif;
+    font-size: 1.2rem;
+}
+
+.courseSelector {
+    max-width: 100% !important;
+    min-width: 100% !important;
+    height: 35px !important;
+    border-radius: 10px !important;
+    border: 0 !important;
+    background-color: white;
+}
+
+.multiselect-dropdown {
+    max-width: 100% !important;
+    min-width: 100% !important;
+    height: 35px !important;
+    border-radius: 10px !important;
+    border: 0 !important;
+    background-color: white;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right .75rem center;
+    background-size: 16px 12px;
+}
+
+@media (pointer:none), (pointer:coarse) {
+    .multiselect-dropdown {
+        display: none !important;
+    }
 }
