--- a/css/sites/general.css
+++ b/css/sites/general.css
@@ -140,3 +140,14 @@ body {
         display: none !important;
     }
 }
+
+.collapse-image {
+    overflow-x: hidden;
+    width: 60%;
+}
+
+@media only screen and (max-width: 1200px) {
+    .collapse-image {
+        width: 100%;
+    }
+}
