--- a/css/studentlogin.css
+++ b/css/studentlogin.css
@@ -1,5 +1,12 @@
 body {
-    background-color: #e7e8ed
+    background-color: #e7e8ed;
+    overflow-x: hidden;
+}
+
+.selector {
+    background-color: #f1f1f1;
+    border: 0;
+    border-radius: 15px;
 }
 
 option[value=""][disabled] {
@@ -36,6 +43,25 @@ option[value=""][disabled] {
 .brand-svg img {
     height: 30px;
     margin-bottom: 15px
+}
+.multiselect-dropdown {
+    max-width: 100% !important;
+    min-width: 100% !important;
+    height: 35px !important;
+    border-radius: 10px !important;
+    border: 0 !important;
+    background-color: white;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right .75rem center;
+    background-size: 16px 12px;
+}
+
+
+@media (pointer:none), (pointer:coarse) {
+    .multiselect-dropdown {
+        display: none !important;
+    }
 }
 
 button {
