--- a/css/studentHome.css
+++ b/css/studentHome.css
@@ -18,6 +18,7 @@
     --sys-brown: #a2845e;
     --sys-black: #000;
     --sys-white: #fff;
+    --sys-gray0: #7c7c81;
     --sys-gray: #8e8e93;
     --sys-gray2: #aeaeb2;
     --sys-gray3: #c7c7cc;
@@ -45,6 +46,7 @@
         --sys-brown: #ac8e68;
         --sys-black: #fff;
         --sys-white: #000;
+        --sys-gray0: #909096;
         --sys-gray: #8e8e93;
         --sys-gray2: #636366;
         --sys-gray3: #48484a;
@@ -124,8 +126,16 @@ h3 {
     cursor: pointer;
 }
 
+.button {
+    background-color: var(--sys-gray5);
+    color: var(--sys-blue);
+    min-width: 200px;
+    border-radius: 12px;
+    border: 1px solid var(--sys-gray6)
+}
+
 .display-none {
-    display: none;
+    display: none !important;
 }
 
 
