--- a/go/css/classync.css
+++ b/go/css/classync.css
@@ -279,6 +279,15 @@ html, body {
 }
 
 /* QUOTATION STYLING =================================================================================================*/
+.pollOptions {
+    max-height: 300px;
+}
+
+@media only screen and (max-width: 744px) {
+    .pollOptions {max-height: none}
+}
+
+/* QUOTATION STYLING =================================================================================================*/
 .quotationBlock {
     border-radius: 8px;
 }
